@@ -1,6 +1,6 @@
 /* Low level packing and unpacking of values for GDB, the GNU Debugger.
 
-   Copyright (C) 1986-2013 Free Software Foundation, Inc.
+   Copyright (C) 1986-2000, 2002-2012 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -1037,14 +1037,15 @@ value_contents_equal (struct value *val1, struct value *val2)
 {
   struct type *type1;
   struct type *type2;
+  int len;
 
   type1 = check_typedef (value_type (val1));
   type2 = check_typedef (value_type (val2));
-  if (TYPE_LENGTH (type1) != TYPE_LENGTH (type2))
+  len = TYPE_LENGTH (type1);
+  if (len != TYPE_LENGTH (type2))
     return 0;
 
-  return (memcmp (value_contents (val1), value_contents (val2),
-		  TYPE_LENGTH (type1)) == 0);
+  return (memcmp (value_contents (val1), value_contents (val2), len) == 0);
 }
 
 int
@@ -1197,6 +1198,11 @@ int
 deprecated_value_modifiable (struct value *value)
 {
   return value->modifiable;
+}
+void
+deprecated_set_value_modifiable (struct value *value, int modifiable)
+{
+  value->modifiable = modifiable;
 }
 
 /* Return a mark in the value chain.  All values allocated after the
@@ -2253,17 +2259,11 @@ show_convenience (char *ignore, int from_tty)
       printf_filtered (("\n"));
     }
   if (!varseen)
-    {
-      /* This text does not mention convenience functions on purpose.
-	 The user can't create them except via Python, and if Python support
-	 is installed this message will never be printed ($_streq will
-	 exist).  */
-      printf_unfiltered (_("No debugger convenience variables now defined.\n"
-			   "Convenience variables have "
-			   "names starting with \"$\";\n"
-			   "use \"set\" as in \"set "
-			   "$foo = 5\" to define them.\n"));
-    }
+    printf_unfiltered (_("No debugger convenience variables now defined.\n"
+			 "Convenience variables have "
+			 "names starting with \"$\";\n"
+			 "use \"set\" as in \"set "
+			 "$foo = 5\" to define them.\n"));
 }
 
 /* Extract a value as a C number (either long or double).
@@ -3367,19 +3367,14 @@ void
 _initialize_values (void)
 {
   add_cmd ("convenience", no_class, show_convenience, _("\
-Debugger convenience (\"$foo\") variables and functions.\n\
-Convenience variables are created when you assign them values;\n\
-thus, \"set $foo=1\" gives \"$foo\" the value 1.  Values may be any type.\n\
+Debugger convenience (\"$foo\") variables.\n\
+These variables are created when you assign them values;\n\
+thus, \"print $foo=1\" gives \"$foo\" the value 1.  Values may be any type.\n\
 \n\
 A few convenience variables are given values automatically:\n\
 \"$_\"holds the last address examined with \"x\" or \"info lines\",\n\
-\"$__\" holds the contents of the last address examined with \"x\"."
-#ifdef HAVE_PYTHON
-"\n\n\
-Convenience functions are defined via the Python API."
-#endif
-	   ), &showlist);
-  add_alias_cmd ("conv", "convenience", no_class, 1, &showlist);
+\"$__\" holds the contents of the last address examined with \"x\"."),
+	   &showlist);
 
   add_cmd ("values", no_set_class, show_values, _("\
 Elements of value history around item number IDX (or last ten)."),
